# Food-Delivery-Backend

./: .env.example  .flake8  .gitignore  Makefile  README.md  pyproject.toml
server/: enums.py  manage.py
server/account/: models.py  urls.py
server/account/api/: urls.py
server/account/api/v1/: urls.py
server/account/api/v1/docs/: __init__.py  address_docs.py  health_docs.py  (+3 more)
server/account/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_table.py  0003_useraddress.py
server/core/: urls.py  wsgi.py
server/core/settings/: __init__.py  base.py  database.py  drf.py  redis.py  scalar.py  simple_jwt.py
server/core/settings/dev/: base.py  logging.py
server/core/settings/production/: __init__.py  base.py  logging.py
server/payment/: urls.py
server/payment/api/: urls.py
server/payment/api/v1/: urls.py
server/restaurants/: apps.py  urls.py
server/restaurants/api/: urls.py
server/restaurants/api/v1/: urls.py
server/restaurants/management/commands/: create_mongo_collection.py  fill_menu_mongodb.py  fill_restaurant_db.py  refill_pgdb.py
server/restaurants/migrations/: 0001_initial.py  0002_alter_restaurant_table.py  0003_restaurant_r_image_url.py  0004_alter_restaurant_avg_cost.py  0005_restaurant_rating_count_int.py  0006_cart_cartitems_order_orderitems.py  0007_rename_restaurant_id_cart_restaurant_and_more.py
server/restaurants/models/: __init__.py  cart.py  menu.py  order.py  restaurant.py
server/utils/: __init__.py  global_exception_handler.py  global_throttles.py  log_setup.py  system_prints.py  token_exception_handler.py
(+45 files in other folders)
